--- a/templates/search/index.jade
+++ b/templates/search/index.jade
@@ -1,6 +1,8 @@
-{% load bootstrap3 %}
-{% bootstrap_css %}
-{% bootstrap_javascript %}
+{% extends "base.jade" %}
+
+
+{% block content %}
+
 
 form(action='/search/', method='post') {% csrf_token %}
   {% bootstrap_form form %}
@@ -10,8 +12,10 @@ form(action='/search/', method='post') {% csrf_token %}
 for b in book_list
   h1 Title: {{b.title}}
   h2 Authors: {{b.authors}}
-  h3 price: {{b.price}}
+  h3 price: {{b.price}} €
   form(action='/add/', method='post') {% csrf_token %}
     // input(type='hidden', value=b.title, name='book')
     input(type='hidden', value=b, name='book')
     input.btn.btn-primary(type='submit', value='add book')
+
+{% endblock content %}
