external search and display work with accents.

--- a/templates/search/index.jade
+++ b/templates/search/index.jade
@@ -12,13 +12,18 @@ form(action='/search/', method='post')
   // {{ form.as_p }}
   input.btn.btn-primary(type='submit', value='submit')
 
-for b in book_list
-  h1 Title: {{b.title}}
-  h2 Authors: {{b.authors}}
-  h3 price: {{b.price}} €
-  form(action='/add/', method='post') {% csrf_token %}
-    // input(type='hidden', value=b.title, name='book')
-    input(type='hidden', value=b, name='book')
-    input.btn.btn-primary(type='submit', value='add book')
+// for b in book_list
+//   h1 Title: {{b.title}}
+//   h2 Authors: {{b.authors}}
+//   h3 price: {{b.price}} €
+//   div {{b.description}}
+//   form(action='/add/', method='post') {% csrf_token %}
+//     // input(type='hidden', value=b.title, name='book')
+//     input(type='hidden', value=b, name='book')
+//     input.btn.btn-primary(type='submit', value='add book')
 
+
+div.col-md-10
+  {% block search_result %}
+  {% endblock search_result %}
 {% endblock content %}
