--- a/templates/search/search_result.jade
+++ b/templates/search/search_result.jade
@@ -6,23 +6,31 @@
 {% bootstrap_javascript %}
 
 {% block search_result %}
-// for b in book_list
 for b in result_list
   h1 Title: {{b.title}}
   h2 Authors: {{b.authors}}
-  h3 price: {{b.price}} €
-  div {{b.description}}
+  h3 price: {{b.price}} € ean: {{b.ean}}
+  if b.editor
+    h3 editor: {{b.editor}}
+  if b.description
+    div {{b.description}}
+  div details_url: {{b.details_url}}
   form(action='/add/', method='post') {% csrf_token %}
     {% csrf_token %}
     // {% bootstrap_form result_form %}
     // what is the way not to do that ?!
     input(type='hidden', value="{{ b.title }}", name='title')
     input(type='hidden', value="{{ b.authors }}", name='authors')
-    input(type='hidden', value="{{ b.description }}", name='description')
+    if b.description
+      input(type='hidden', value="{{ b.description }}", name='description')
     input(type='hidden', value="{{ b.price }}", name='price')
     input(type='hidden', value="{{ b.ean }}", name='ean')
+    if b.editor
+      input(type='hidden', value="{{ b.editor }}", name='editor')
+    input(type='hidden', value="{{ b.details_url }}", name='details_url')
     // input(type='hidden', value="{{ b }}", name='book')
-    input.btn.btn-primary(type='submit', value='add book')
+    input.btn.btn-primary(type='submit', value='add book', title="Ajouter cet article à mon stock")
+
 
 
 {% endblock search_result %}
