template - added link in title of search result

--- a/templates/base.jade
+++ b/templates/base.jade
@@ -2,7 +2,10 @@ html
   head
     title Ruche-web
   body.container
-    h1 Ruche-web
+    span
+      h1 Ruche-web
+      a(href="/admin") admin
+
     div.col-md-2(id="menu")
           h2
             a(href="/collection") Mon stock
