--- a/templates/search/search_result.jade
+++ b/templates/search/search_result.jade
@@ -8,14 +8,14 @@
 {% block search_result %}
 for b in result_list
   if b.details_url
-    h1
-      a(href="{{b.details_url}}") {{b.title}}
+    h3
+      a(href="{{ b.details_url }}") {{b.title}}
   else
-    h1 {{b.title}}
-  h2 {{b.authors}}
-  h3 price: {{b.price}} € ean: {{b.ean}}
+    h3 {{b.title}}
+  h4 {{b.authors}}
+  div price: {{b.price}} € ean: {{b.ean}}
   if b.editor
-    h3 editor: {{b.editor}}
+    div editor: {{b.editor}}
   if b.description
     div {{b.description}}
   form(action='/add/', method='post') {% csrf_token %}
