--- a/templates/search/collection.jade
+++ b/templates/search/collection.jade
@@ -13,8 +13,10 @@ form(action='/collection/', method='post')
   input.btn.btn-primary(type='submit', value='submit')
 
 for b in book_list
-  h3 Title: {{b.title}}
-  h4 Authors: {{b.authors}}
+  h3
+    a(href="/admin/search/card/{{ b.id }}") {{b.title}}
+  if b.authors
+    h4 Authors: {{b.authors}}
   div price: {{b.price}} €, ean: {{ b.ean }}
   form(action='/collection/sell/', method='post') {% csrf_token %}
     // input(type='hidden', value=b.title, name='book')
