--- a/templates/search/search_result.jade
+++ b/templates/search/search_result.jade
@@ -9,7 +9,8 @@
 for b in result_list
   table.table.table-condensed
     tr
-      td: img(src="{{ b.img }}")
+      if b.img
+        td: img(src="{{ b.img }}")
       td
 
         if b.details_url
@@ -34,6 +35,9 @@ for b in result_list
     if b.editor
       input(type='hidden', value="{{ b.editor }}", name='editor')
     input(type='hidden', value="{{ b.details_url }}", name='details_url')
+    if b.img
+      input(type='hidden', value="{{ b.img }}", name='img')
+    input(type='hidden', value="{{ data_source }}", name='data_source')
     // input(type='hidden', value="{{ b }}", name='book') // can't do that, the encoding is bad.
     input.btn.btn-primary(type='submit', value='add book', title="Ajouter cet article à mon stock")
 
