--- a/templates/base.jade
+++ b/templates/base.jade
@@ -1,6 +1,6 @@
 html
   head
-    title Ruche-web
+    title Ruche-web {% block pagetitle %} {% endblock %}
   body.container
     span
       h1 Ruche-web
