--- a/templates/search/collection.jade
+++ b/templates/search/collection.jade
@@ -32,6 +32,6 @@ for b in book_list
     input(type='hidden', value="{{ b.price }}", name='price')
     input(type='hidden', value="{{ b.ean }}", name='ean')
     input(type='hidden', value=b, name='book')
-    input.btn.btn-primary(type='submit', value='Sell this book')
+    input.btn.btn-primary(type='submit', value='Vendre')
 
 {% endblock content %}
