--- a/templates/base.jade
+++ b/templates/base.jade
@@ -1,9 +1,9 @@
 html
   head
-    title Ruche-web {% block pagetitle %} {% endblock %}
+    title Abelujo {% block pagetitle %} {% endblock %}
   body.container
     span
-      h1 Ruche-web
+      h1 Abelujo
       a(href="/admin") admin
 
     div.col-md-2(id="menu")
