--- a/templates/search/search_result.jade
+++ b/templates/search/search_result.jade
@@ -16,7 +16,7 @@ for b in result_list
       td
 
         if b.details_url
-          h3: a(href="{{ b.details_url }}", title="Voir la fiche complète sur Chapitre.com") {{b.title}}
+          h3: a(href="{{ b.details_url }}", title="Voir la fiche complète sur {{ data_source }}") {{ b.title }}
         else
           h3 {{b.title}}
         h4 {{b.authors}}
