--- a/templates/search/search_result.jade
+++ b/templates/search/search_result.jade
@@ -24,8 +24,10 @@ for b in result_list
             for author in b.authors
               div {{ author }}
         div price: {{b.price}} € ean: {{b.ean}}
-        if b.publisher
-          div éditeur: {{b.publisher}}
+        if b.publishers
+          span éditeur:
+          for pub in b.publishers
+            span {{ pub }} 
         if b.description
           div {{b.description}}
 
