addForm: use 'number' input widget, form validation++
django uses a text widget for the IntegerField, but we prefer the number
widget (html5).

--- a/templates/search/collection.jade
+++ b/templates/search/collection.jade
@@ -8,7 +8,7 @@
 
 form(action='/collection/', method='post')
   {% csrf_token %}
-  {% bootstrap_form form %}
+  {% bootstrap_form searchForm %}
   // {{ form.as_p }}
   input.btn.btn-primary(type='submit', value='submit')
 
