--- a/templates/search/index.jade
+++ b/templates/search/index.jade
@@ -9,7 +9,7 @@
 
 form(action='/search/', method='post')
   {% csrf_token %}
-  {% bootstrap_form form %}
+  {% bootstrap_form searchForm %}
   // {{ form.as_p }}
   span
     input.btn.btn-primary(type='submit', value='Rechercher')
