models: Deposits, Distributor
the very beginning of deposits.

--- a/templates/base.jade
+++ b/templates/base.jade
@@ -11,6 +11,9 @@ html
             a(href="/collection") Mon stock
           h2
             a(href="/search") Nouvelle entrée
+          h2
+            a(href="/deposits") Dépôts
+
     div.col-md-10(id="content")
       {% if messages %}
       ul
