add a card to a deposit from the collection page. MISSES LOGIC
we implement the simplest solution for the UI, for the sake of writing
the application logic. It would be much better to use select2 widgets or
another nice javascript/ajax tool, but that will be for later.

--- a/templates/search/collection.jade
+++ b/templates/search/collection.jade
@@ -43,4 +43,10 @@ for b in book_list
     input(type='hidden', value=b, name='book')
     input.btn.btn-primary(type='submit', value='Vendre')
 
+  form.form-inline(action="/deposits/addcard/", method="post") {% csrf_token %}
+    {% bootstrap_form AddToDepositForm %}
+    input(type="hidden", value='{% url "search.views.collection" %}', name="redirect_to")
+    input(type="hidden", value="{{ b.ean }}", name="ean")
+    input.btn.btn-primary(type="submit", value="ajouter au dépôt")
+
 {% endblock content %}
