autocomplete_light. Use it in depositForm
Ajax calls  without writing javascript (yet).
Much easier to setup than django-ajax-selects, more complete than a simple ajax call
to a view with a json response, and less complete than a JS framework (will come next).

Use it in Deposits' form creation to search for cards (replaces the many to many select).

--- a/templates/base.jade
+++ b/templates/base.jade
@@ -1,3 +1,6 @@
+script(src="http://ajax.googleapis.com/ajax/libs/jquery/1.9.0/jquery.js", type="text/javascript")
+{% include 'autocomplete_light/static.html' %}
+
 html
   head
     title Abelujo {% block pagetitle %} {% endblock %}
