list and view deposits
misses autocomplete in the admin to edit the list of cards.

--- a/templates/search/deposits.jade
+++ b/templates/search/deposits.jade
@@ -13,7 +13,8 @@ else
 table.table.table-striped.table-hover
   for dep in deposits
     tr
-      td {{ dep.name }}
+      td
+        a(href="{{ dep.get_absolute_url }}") {{ dep.name }}
       td {{ dep.distributor.name }}
 
 a.btn.btn-primary(href="{% url 'deposits_new' %}") Nouveau dépôt
