fix template bug.
which prevented unit tests to pass. We needed Card fixtures with a
publisher key.

--- a/templates/search/search_result.jade
+++ b/templates/search/search_result.jade
@@ -30,10 +30,11 @@ for b in result_list
             td
               span
                 b éditeur 
-                for pub in b.publishers
-                  span {{ pub }}
-                  if not forloop.last
-                    span ; 
+                if b.publishers
+                    for pub in b.publishers
+                      span {{ pub }}
+                      if not forloop.last
+                        span ; 
             td
               span
                 b(title="l'ean sera téléchargé à l'enregistrement de la notice.") ean 
