Try out RapydScript.

--- a/templates/base.jade
+++ b/templates/base.jade
@@ -23,6 +23,7 @@ html(ng-app="abelujo")
     script(type='text/javascript', src="{% static 'underscore/underscore.js' %}")
     script(type='text/javascript', src="{% static 'js/build/vendor.js' %}")
     script(type='text/javascript', src="{% static 'js/build/abelujo.js' %}")
+    // script(type='text/javascript', src="{% static 'js/build/rapyd.js' %}")
 
     // example for angular:
     // div(ng-controller="IntroController")
